# tds-dbt-favorita

./: .black  .dockerignore  .flake8  .gitignore  .prefectignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  prefect.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  docs.yml
dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml  selectors.yml
dbt/docs/: overview.md
dbt/macros/: get_bqml_feature_columns.sql  get_bqml_prediction_features.sql  staging_incremental.sql
dbt/models/: exposures.yml
dbt/profiles/: profiles.yml
dbt/tests/: assert_company_sales_reconcile.sql  assert_date_spine_continuous.sql  assert_sales_fct_row_count.sql  assert_train_test_date_boundary.sql
docs/: accelerators.md  benchmarks.md  case_study.md  client_rollout.md  consulting_package.md  delivery_artifacts.md  iac.md  overview.md  reference_architecture.md
docs/dbt/: consulting_package.md
docs/mlflow/: consulting_package.md
docs/prefect/: consulting_package.md
docs/vertex/: consulting_package.md
orchestration/: README.md  __init__.py
orchestration/flows/: __init__.py  backfill.py  dbt.py  vertex.py  vertex_pipeline.py
orchestration/tasks/: __init__.py  dbt.py  vertex.py
orchestration/tests/: test_configs.py  test_pipelines.py
orchestration/utils/: __init__.py  configs.py  pipelines.py  repo.py
scripts/: apply_vertex_bq_ddl.py  load_favorita_to_bigquery.py  push_vertex_training_image.sh  setup_vertex_artifact_registry.sh
vertex/: README.md  __init__.py
vertex/config/: __init__.py  backfill.py  load_config.py  model_config.yaml  pipelines.py  predict_config.yaml  train_config.yaml  validate_all.py
vertex/ddl/: vertex_bq_tables.sql
vertex/jobs/: __init__.py  backfill.py  gcp.py  run.py  run_batch.py  submit.py  submit_pipeline.py
vertex/models/: __init__.py  predict.py  registry.py  sample_xgboost_train.py
vertex/ops/: README.md
vertex/pipelines/: __init__.py  compile.py  favorita_ml_pipeline.py
vertex/tests/: __init__.py  conftest.py  test_artifacts_registry.py  test_backfill.py  test_bigquery_utils.py  test_data_loading.py  test_data_utils.py  test_experiment_tracking.py  test_load_config.py  test_load_favorita_archive.py  test_mlflow_catalog.py  test_optimize_params.py  test_pipelines.py  test_predict_xgboost.py  test_predictions.py  test_registry.py  test_run_batch.py  test_timeseries.py  test_tracking.py  test_train_xgboost.py  test_update_config_params.py  test_validate_all_configs.py  test_vertex_utils.py
vertex/utils/: __init__.py  artifacts.py  bigquery_utils.py  data_loading.py  data_utils.py  experiment_tracking.py  features.py  metadata.py  ml_utils.py  mlflow_catalog.py  optimize_params.py  predictions.py  run_context.py  tracking.py  update_config_params.py  (+1 more)
(+36 files in other folders)
