[tool.poetry]
name = "tds-favorita"
version = "0.1.0"
description = "Machine learning pipeline for Favorita sales forecasting using dbt and Google Vertex AI"
authors = ["Gordon Silvera <gordon@thedatastrategist.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
numpy = "^1.24.0"
pyyaml = "^6.0"
requests = "^2.31.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
joblib = "^1.3.0"
# dbt dependencies
dbt-core = "^1.7.0"
dbt-bigquery = "^1.7.0"
# Google Cloud dependencies
google-cloud-bigquery = "^3.11.0"
google-cloud-storage = "^2.10.0"
google-cloud-aiplatform = "^1.38.0"
py7zr = "^0.22.0"
# Kaggle data (pin: 1.0.1 requires kagglesdk.get_web_endpoint not yet on PyPI)
kagglehub = "1.0.0"
# ML Pipeline
kfp = "^2.5.0"
optuna = "^3.6.0"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
# Code formatting and linting
black = "^23.12.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
train = "vertex.models.xgboost.train_xgboost:main"
predict = "vertex.models.xgboost.predict_xgboost:main"
vertex-run = "vertex.jobs.run:main"
vertex-submit = "vertex.jobs.submit:main"
vertex-pipeline-compile = "vertex.pipelines.compile:main"
vertex-pipeline-submit = "vertex.jobs.submit_pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["vertex/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--verbose",
    "--cov=vertex",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = "xgboost.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "statsmodels.*"
ignore_missing_imports = true
